Fix for extra whitespace below tagline (due to use of p)

--- a/assets/sass/partials/_main.scss
+++ b/assets/sass/partials/_main.scss
@@ -2233,7 +2233,7 @@ table {
   }
 }
 .yoast-tagline-after-header-widget, #yoast-tagline {
-  padding: 20px 0px;
+  padding: 20px 0px 4px;
   text-align: center;
   font-size: 1.5em;
   color: $c_taglineFullWidth;
